--- a/CheckYourEligibility-Admin/Views/School/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Enter_Details.cshtml
@@ -16,7 +16,7 @@
 <form asp-controller="School" asp-action="Enter_Details" method="post">
     <fieldset class="govuk-fieldset">
         <div class="govuk-form-group">
-            <label class="govuk-label" for="first-name">
+            <label class="govuk-label" for="FirstName">
                 Parent or guardian first name
             </label>
             <p class="govuk-error-message">
@@ -26,7 +26,7 @@
         </div>
 
         <div class="govuk-form-group">
-            <label class="govuk-label" for="surname">
+            <label class="govuk-label" for="LastName">
                 Parent or guardian first name
             </label>
             <p class="govuk-error-message">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="govuk-form-group">
-            <label class="govuk-label" for="email">
+            <label class="govuk-label" for="EmailAddress">
                 Parent or guardian email address
             </label>
             <p class="govuk-error-message">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="govuk-form-group">
-            <label class="govuk-label" for="ni-number-entered">
+            <label class="govuk-label" for="NationalInsuranceNumber">
                 Parent or guardian National Insurance number
             </label>
             <p class="govuk-error-message">
@@ -56,7 +56,7 @@
 
             <p class="paragraph-add-margin-top">Or</p>
 
-            <label class="govuk-label" for="nass">
+            <label class="govuk-label" for="NationalAsylumSeekerServiceNumber">
                 Parent or guardian asylum support reference number
             </label>
             <p class="govuk-error-message">
@@ -81,7 +81,7 @@
 
                     <div class="govuk-date-input__item">
                         <div class="govuk-form-group" data-type="dob-input">
-                            <label class="govuk-label govuk-date-input__label" for="dob-day">
+                            <label class="govuk-label govuk-date-input__label" for="Day">
                                 Day
                             </label>
                             <p class="govuk-error-message">
@@ -93,7 +93,7 @@
 
                     <div class="govuk-date-input__item">
                         <div class="govuk-form-group" data-type="dob-input">
-                            <label class="govuk-label govuk-date-input__label" for="dob-month">
+                            <label class="govuk-label govuk-date-input__label" for="Month">
                                 Month
                             </label>
                             <p class="govuk-error-message">
@@ -105,7 +105,7 @@
 
                     <div class="govuk-date-input__item">
                         <div class="govuk-form-group" data-type="dob-input">
-                            <label class="govuk-label govuk-date-input__label" for="dob-year">
+                            <label class="govuk-label govuk-date-input__label" for="Year">
                                 Year
                             </label>
                             <p class="govuk-error-message">
