--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -112,6 +112,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="module" src="~/js/govuk-frontend.min.js"></script>
+    <script src="~/js/dfefrontend.js"></script>
     <script type="module">
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
