--- a/CheckYourEligibility-Admin/wwwroot/css/application.css
+++ b/CheckYourEligibility-Admin/wwwroot/css/application.css
@@ -1,54 +1,10 @@
 @charset "UTF-8";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 :root {
   --govuk-frontend-version: "5.3.0";
   --govuk-frontend-breakpoint-mobile: 20rem;
   --govuk-frontend-breakpoint-tablet: 40.0625rem;
   --govuk-frontend-breakpoint-desktop: 48.0625rem;
 }
-
 
 a, .govuk-link {
   font-family: "GDS Transport", arial, sans-serif;
@@ -60,18 +16,19 @@ a, .govuk-link {
 }
 /*! Copyright (c) 2011 by Margaret Calvert & Henrik Kubel. All rights reserved. The font has been customised for exclusive use on gov.uk. This cut is not commercially available. */ /* stylelint-disable-line scss/comment-no-loud  */
 @font-face {
-  font-family: "GDS Transport";
-  font-style: normal;
-  font-weight: normal;
-  src: url("/plugin-assets/govuk-frontend/dist/govuk/assets/fonts/light-94a07e06a1-v2.woff2") format("woff2"), url("/plugin-assets/govuk-frontend/dist/govuk/assets/fonts/light-f591b13f7d-v2.woff") format("woff");
-  font-display: fallback;
+    font-family: "GDS Transport";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../assets/fonts/light-94a07e06a1-v2.woff2") format("woff2"), url("../assets/fonts/light-f591b13f7d-v2.woff") format("woff");
+    font-display: fallback;
 }
+
 @font-face {
-  font-family: "GDS Transport";
-  font-style: normal;
-  font-weight: bold;
-  src: url("/plugin-assets/govuk-frontend/dist/govuk/assets/fonts/bold-b542beb274-v2.woff2") format("woff2"), url("/plugin-assets/govuk-frontend/dist/govuk/assets/fonts/bold-affa96571d-v2.woff") format("woff");
-  font-display: fallback;
+    font-family: "GDS Transport";
+    font-style: normal;
+    font-weight: bold;
+    src: url("../assets/fonts/bold-b542beb274-v2.woff2") format("woff2"), url("../assets/fonts/bold-affa96571d-v2.woff") format("woff");
+    font-display: fallback;
 }
 @media print {
   a, .govuk-link {
@@ -3609,7 +3566,7 @@ p + .govuk-heading-s,
   display: inline-block;
   min-width: 125px;
   padding-top: 112px;
-  background-image: url("/plugin-assets/govuk-frontend/dist/govuk/assets/images/govuk-crest.png");
+  background-image: url("../assets/images/govuk-crest.png");
   background-repeat: no-repeat;
   background-position: 50% 0%;
   background-size: 125px 102px;
@@ -3618,7 +3575,7 @@ p + .govuk-heading-s,
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .govuk-footer__copyright-logo {
-    background-image: url("/plugin-assets/govuk-frontend/dist/govuk/assets/images/govuk-crest-2x.png");
+    background-image: url("../assets/images/govuk-crest-2x.png");
   }
 }
 
