--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -90,7 +90,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Day"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
+                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" inputmode="numeric">
                             </div>
                         </div>
 
@@ -102,7 +102,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Month"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
+                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" inputmode="numeric">
                             </div>
                         </div>
 
@@ -114,7 +114,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="ChildList[i].Year"></span>
                                 </p>
-                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" type="text" inputmode="numeric">
+                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" inputmode="numeric">
                             </div>
                         </div>
                     </div>
