--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -61,7 +61,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="Day"></span>
                         </p>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Day" type="text" inputmode="numeric" maxlength="2" data-type="dob" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Day" inputmode="numeric" maxlength="2" data-type="dob" />
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="Month"></span>
                         </p>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Month" type="text" inputmode="numeric" maxlength="2" data-type="dob" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Month" inputmode="numeric" maxlength="2" data-type="dob" />
                     </div>
                 </div>
 
