Re-route try again link on all outcome pages that use it and general tidy up of code in outcome pages for consistency

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -1,10 +1,9 @@
-﻿<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
-        <p>The personal information you entered doesn’t match the departmental records.</p>
-        <p>Please try again, ensuring you’ve entered your details accurately and in the correct format.</p>
-        <p>If you’ve received this message multiple times please contact your school administrator.</p>
-        <p><a href="check">Try again</a></p>
-    </div>
+﻿<div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+    <p>The personal information you entered doesn’t match the departmental records.</p>
+    <p>Please try again, ensuring you’ve entered your details accurately and in the correct format.</p>
+    <p>If you’ve received this message multiple times please contact your school administrator.</p>
+
+    <p><a href="javascript:window.history.back()">Try again</a></p>
 </div>
 
