Fix formatting issue on parent eligible outcome. BugFix Parent's name 168968

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -21,7 +21,7 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="first-name">
-                Parent's first name
+                Your first name
             </label>
             <p class="govuk-error-message">
                 <span asp-validation-for="FirstName"></span>
@@ -31,7 +31,7 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="surname">
-                Parent's last name
+                Your last name
             </label>
             <p class="govuk-error-message">
                 <span asp-validation-for="LastName"></span>
@@ -114,7 +114,7 @@
 
                     <div class="govuk-form-group">
                         <label class="govuk-label" for="ni-number-entered">
-                            Parent's National Insurance number
+                            Your National Insurance number
                         </label>
                         <div id="ni-number-entered-hint" class="govuk-hint">
                             For example, ‘QQ 12 34 56 C’
