--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
@@ -28,7 +28,7 @@
                     Parent or guardian name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  @Model.ParentFirstName @Model.ParentLastName
+
                 </dd>
 
             </div>
@@ -37,34 +37,20 @@
                     Parent or guardian date of birth
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    @Model.ParentDateOfBirth
+
                 </dd>
 
             </div>
 
-            @if (Model.ParentNino == null){
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Asylum support reference number
                 </dt>
                 <dd class="govuk-summary-list__value">
-                        @Model.ParentNass
-                    </dd>
 
-                </div>
-            }
-            else
-            {
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        National insurance number
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        @Model.ParentNino
                 </dd>
 
             </div>
-            }
 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -79,13 +65,11 @@
     </div>
 </div>
 
-<!-- iterate child list and display data -->
-@for (var i = 0; i < Model.Children.ChildList.Count; i++)
-{
+
 <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
         <h2 class="govuk-summary-card__title">
-                Child @(@i + 1)
+            Child 1
         </h2>
         <ul class="govuk-summary-card__actions">
             <li class="govuk-summary-card__action">
@@ -104,7 +88,7 @@
                     Child's name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                        @Model.Children.ChildList[i].FirstName @Model.Children.ChildList[i].LastName
+
                 </dd>
 
             </div>
@@ -113,7 +97,7 @@
                     School
                 </dt>
                 <dd class="govuk-summary-list__value">
-                        @Model.Children.ChildList[i].School.Name
+
                 </dd>
 
             </div>
@@ -123,7 +107,7 @@
                     Child's date of birth
                 </dt>
                 <dd class="govuk-summary-list__value">
-                        @(new DateOnly((int)Model.Children.ChildList[i].Year, (int)Model.Children.ChildList[i].Month, (int)Model.Children.ChildList[i].Day).ToString("dd/MM/yyyy"))
+
                 </dd>
 
             </div>
@@ -133,8 +117,6 @@
         </dl>
     </div>
 </div>
-}
-
 
 
 
