--- a/CheckYourEligibility-Admin/Views/School/Nass.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Nass.cshtml
@@ -1,6 +1,6 @@
 ﻿@using CheckYourEligibility_FrontEnd.Models
 @using Newtonsoft.Json
-@model CheckYourEligibility_FrontEnd.Models.Parent
+@model CheckYourEligibility_FrontEnd.Models.ParentGuardian
 
 @{
     ViewData["Title"] = "Nass Number";
@@ -8,7 +8,7 @@
 
     // using tempdata from enter_details page to populate the incomplete-model
     var request = TempData["Request"] as string;
-    var parent = JsonConvert.DeserializeObject<Parent>(request);
+    var parent = JsonConvert.DeserializeObject<ParentGuardian>(request);
 }
 
 @if (!ViewData.ModelState.IsValid)
