--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
-    <title>@ViewData["Title"]  - Check and apply for school and childcare support - GOV.UK</title>
+    <title>@ViewData["Title"] `Home - Check and apply for school and childcare support - GOV.UK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#0b0c0c">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,11 @@
                 </a>
             </div>
             <div class="dfe-header__content" id="content-header">
-                <ul class="dfe-header__action-links"></ul>
+                <ul class="dfe-header__action-links">
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--inverse">Sign out</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
@@ -50,18 +54,12 @@
     </div>
 
 
-    <main role="main">
-        <div class="govuk-width-container ">
-            <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
-            <main class="govuk-main-wrapper " id="main-content" role="main">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
-                    </div>
-                </div>
-            </main>
-        </div>
-    </main>
+    <div class="govuk-width-container ">
+        <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
+        <main class="govuk-main-wrapper " id="main-content" role="main">
+            @RenderBody()
+        </main>
+    </div>
 
 
     <footer class="govuk-footer " role="contentinfo">
@@ -112,6 +110,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="module" src="~/js/govuk-frontend.min.js"></script>
+    <script src="~/js/dfefrontend.js"></script>
     <script type="module">
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
