Add aria-label for all inputs

--- a/CheckYourEligibility-Admin/Views/School/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Enter_Child_Details.cshtml
@@ -40,7 +40,7 @@
                             <span asp-validation-for="ChildList[i].FirstName"></span>
                         </p>
 
-                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text">
+                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name">
                     </div>
 
                     <div class="govuk-form-group">
@@ -50,7 +50,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="ChildList[i].LastName"></span>
                         </p>
-                        <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds" type="text">
+                        <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="Last name">
                     </div>
 
                     <div class="govuk-form-group">
@@ -64,7 +64,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="ChildList[i].School.Name"></span>
                         </p>
-                        <input asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds autocomplete__input autocomplete__input--default" type="text" oninput="searchSchool(this.value, @i)">
+                        <input asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds autocomplete__input autocomplete__input--default" type="text" oninput="searchSchool(this.value, @i)" aria-label="School">
                         <input hidden asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" value="" />
                         <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" value="" />
                         <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" value=""  />
@@ -92,7 +92,7 @@
                                         <p class="govuk-error-message">
                                             <span asp-validation-for="ChildList[i].Day"></span>
                                         </p>
-                                        <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
+                                        <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric" aria-label="Day">
                                     </div>
                                 </div>
 
@@ -104,7 +104,7 @@
                                         <p class="govuk-error-message">
                                             <span asp-validation-for="ChildList[i].Month"></span>
                                         </p>
-                                        <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric">
+                                        <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric" aria-label="Month">
                                     </div>
                                 </div>
 
@@ -116,7 +116,7 @@
                                         <p class="govuk-error-message">
                                             <span asp-validation-for="ChildList[i].Year"></span>
                                         </p>
-                                        <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" type="text" inputmode="numeric">
+                                        <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob" class="govuk-input govuk-date-input__input govuk-input--width-4" type="text" inputmode="numeric" aria-label="Year">
                                     </div>
                                 </div>
                             </div>
