--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Check Details";
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
+@model CheckYourEligibility_DfeSignIn.Models.Organisation;
 
 @if (!ViewData.ModelState.IsValid)
 {
@@ -12,7 +13,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Bramhope Primary School Portal
+           @Model.Name
         </h1>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
