Update link to edit child, amend wrong name label,

--- a/CheckYourEligibility-Admin/Views/School/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Check_Answers.cshtml
@@ -90,7 +90,7 @@
                     </h2>
                     <ul class="govuk-summary-card__actions">
                         <li class="govuk-summary-card__action">
-                            <a class="govuk-link" asp-action="Enter_Child_Details" asp-controller="School">Change<span class="govuk-visually-hidden">Child details</span></a>
+                            @Html.ActionLink("Change", "ChangeChildDetails")
                         </li>
                     </ul>
                 </div>
