--- a/CheckYourEligibility-Admin/Views/School/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Enter_Details.cshtml
@@ -27,7 +27,7 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="LastName">
-                Parent or guardian first name
+                Parent or guardian last name
             </label>
             <p class="govuk-error-message">
                 <span asp-validation-for="LastName"></span>
